--- a/ITproekt/Views/Posts/Details.cshtml
+++ b/ITproekt/Views/Posts/Details.cshtml
@@ -44,15 +44,22 @@
 
     </dl>
 
+    <hr />
+
     @foreach (var comment in Model.Comments) {
         <h4>@comment.AuthorName</h4>
         <p class="text-muted">@comment.DateCreated</p>
         <p>@comment.Content</p>
+        if (User.Identity.Name == comment.AuthorName) {
+            <a href="#" >Edit | </a> 
+            <a href="#">Delete</a>
+        }
     }
 
     @using (Html.BeginForm("Create", "Comments", "POST")) {
         @Html.TextArea("Content", "", new { rows = "7", cols = "40", placeholder = "Type your comment here" })
         @Html.Hidden("postId", Model.ID)
+        @Html.Hidden("AuthorName", User.Identity.Name)
         <input type="submit" value="Submit" />
     }
 </div>
