--- a/ITproekt/Views/Posts/Create.cshtml
+++ b/ITproekt/Views/Posts/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", @oninput = "bindHiddenInputs()" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control", @oninput = "bindHiddenInputs()" } })
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,9 +38,9 @@
     </div>
 }
 
-@using (Html.BeginForm("Preview", "Posts", FormMethod.Post, new { target = "_blank" })) {
-    @Html.HiddenFor(model => model.Title)
-    @Html.HiddenFor(model => model.Content)
+@using (Html.BeginForm("Preview", "Posts", FormMethod.Post, new { @target = "_blank" })) {
+    @Html.Hidden("titleValue", "", new { id = "titleValue" })
+    @Html.Hidden("contentValue", "", new { id = "contentValue" })
     <input type="submit" class="btn btn-warning" value="Preview" />
 }
 
@@ -50,4 +50,13 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        function bindHiddenInputs() {
+            console.log("Bind!");
+            let titleValue = $("#Title").val()
+            let contentValue = $("#Content").val()
+            $("#titleValue").val(titleValue);
+            $("#contentValue").val(contentValue);
+        }
+    </script>
 }
