--- a/ITproekt/Views/Posts/Index.cshtml
+++ b/ITproekt/Views/Posts/Index.cshtml
@@ -6,6 +6,17 @@
 
 <h2>Index</h2>
 
+@using (Html.BeginForm("Index", "Posts", FormMethod.Get)) {
+    @Html.TextBox("q", "", new { @class = "form-control" })
+    @Html.DropDownList("category", new SelectList(
+        new List<SelectListItem> {
+            new SelectListItem{ Selected = true, Text = "Title", Value = "title" },
+            new SelectListItem{ Selected = true, Text = "Content", Value = "content" }
+        }
+    , "Value", "Text"))
+    <input type="submit" value="Search" />
+}
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
