--- a/ITproekt/Views/Products/Details.cshtml
+++ b/ITproekt/Views/Products/Details.cshtml
@@ -34,6 +34,8 @@
             @Html.DisplayFor(model => model.Price)
         </dd>
 
+        <img src="@Model.ImageUrl" />
+
     </dl>
 </div>
 <p>
