--- a/ITproekt/Views/Shared/_LoginPartial.cshtml
+++ b/ITproekt/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNet.Identity
+@using ITproekt.Models
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" })) {
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
@@ -10,6 +10,16 @@
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li>
+            @{ var cartItems = Session["cart"] as List<CartItem>;
+                int itemNumber;
+                if (cartItems != null) {
+                    itemNumber = cartItems.Sum(item => item.Quantity);
+                } else { itemNumber = 0; }
+            }
+            @Html.ActionLink($"Cart ({itemNumber.ToString()})", "Index", "ShoppingCart")
+            @*<a href="#">Cart (@itemNumber.ToString())</a>*@
+        </li>
     </ul>
     }
 }
