Added a partial view for a list of Posts for the homepage and Index. Made homepage data dynamic.

--- a/ITproekt/Views/Home/Index.cshtml
+++ b/ITproekt/Views/Home/Index.cshtml
@@ -1,5 +1,10 @@
-﻿@{
+﻿@model ITproekt.Models.HomepageViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
-@Html.Partial("_ProductsPartial")
+@Html.Partial("_ProductsPartial", Model.HotProducts)
+
+@foreach(var post in Model.NewestPosts) {
+    @Html.Partial("_PostListPartial", post)
+}
