--- a/ITproekt/Views/Products/Details.cshtml
+++ b/ITproekt/Views/Products/Details.cshtml
@@ -7,17 +7,10 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Product</h4>
+    <h4>@Model.Name</h4>
+    <img src="@Model.ImageUrl" />
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -33,10 +26,11 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
-
-        <img src="@Model.ImageUrl" />
-
     </dl>
+    @using (Html.BeginForm("AddToCart", "ShoppingCart", FormMethod.Post)) {
+        @Html.Hidden("productId", Model.ID)
+        <input type="submit" class="btn btn-success" value="Add to cart" />
+    }
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
