--- a/ITproekt/Views/Shared/_ProductsPartial.cshtml
+++ b/ITproekt/Views/Shared/_ProductsPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<style>
+﻿@model List<ITproekt.Models.Product>
+
+<style>
     .carousel-control{
         background-image: none!important;
         background-color:black;
@@ -23,16 +25,13 @@
     </ol>
 
     <div class="carousel-inner">
-        <div class="item active">
-            <img src="~/Content/Images/temp.png" style="display: block; margin:auto;" />
-            <button class="btn btn-warning shop-button">View in Shop</button>
-        </div>
-        <div class="item">
-            <img src="~/Content/Images/temp.png" style="display: block; margin:auto;" />
-        </div>
-        <div class="item">
-            <img src="~/Content/Images/temp.png" style="display: block; margin:auto;" />
-        </div>
+
+        @for (int i = 0; i < Model.Count; i++) {
+            <div class="item @(@i == 0 ? "active" : "")">
+                <img src="@Model[i].ImageUrl" style="display: block; margin:auto;" />
+                @Html.ActionLink("View in shop", "Details", "Products", routeValues: new { id = Model[i].ID }, htmlAttributes: new { @class = "btn btn-warning shop-button" })
+            </div>
+        }
     </div>
 
     <a class="left carousel-control" href="#hot-products-carousel" data-slide="prev">
